@@ -313,7 +313,6 @@ class _ArgumentsManager:
                 self.cmdline_parser, title=group_name.capitalize()
             )
             self.cmdline_parser.add_option_group(group)
-            group.level = provider.level  # type: ignore[attr-defined]
             self._mygroups[group_name] = group
             # add section to the config file
             if (
