@@ -28,6 +28,10 @@ Release date: TBA
 
   Ref #5392
 
+* The ``level`` attribute of ``BaseChecker`` has been deprecated.
+
+  Ref #5392
+
 * The ``set_option`` method of ``BaseChecker`` has been deprecated. You can use ``checker.linter.set_option``
   to set an option on the global configuration object instead of a checker-specific object.
 
